feat convert to pdf

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">OneDayBiotechCustomer</string>
+    <string name="app_name">원플로우 : 환자용</string>
 </resources>
